--- a/Automation/Automation.csproj
+++ b/Automation/Automation.csproj
@@ -64,12 +64,13 @@
     </Compile>
     <Compile Include="ImageRecorder.cs" />
     <Compile Include="KeyboardLowLevelHook.cs" />
+    <Compile Include="MouseHelper.cs" />
     <Compile Include="MouseLowLevelHook.cs" />
     <Compile Include="POINT.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Recorder.cs" />
-    <Compile Include="RecordingOrder.cs" />
+    <Compile Include="Globals.cs" />
     <Compile Include="ScreenCapture.cs" />
     <EmbeddedResource Include="FrmMain.resx">
       <DependentUpon>FrmMain.cs</DependentUpon>
