--- a/Automation/packages.config
+++ b/Automation/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="MessageCustomHandler" version="1.0.0.2" targetFramework="net48" />
+  <package id="Ookii.Dialogs.WinForms" version="1.2.0" targetFramework="net48" />
 </packages>
